--- a/main_file.tex
+++ b/main_file.tex
@@ -124,7 +124,7 @@ C_s(Q,y) =  \zeta \, \big( [y-Q]^{+} \big)^2
 \]
 for some constant $\zeta > 0$. Approximation method and solution can be found in \cite{KK18}.
 
-\subsection{Quantile regression} %\label{sub:lit3}
+\subsection{Quantile regression} \label{sub:lit3}
 
 Returning to the classical NVP, we now consider the (more realistic) case in which the demand distribution is unknown, but we have historical demands $y_1,y_2,\dots,y_s$.
 For this case, \emph{quantile regression}
@@ -275,7 +275,7 @@ For each set of demand data and each method, we computed $\hat{Q}_{s+1}$, the 1-
 \end{figure}
 
 Figure \ref{fig:sl0.3} represents the average SL, i.e., the proportion of iterations in which the demand was satisfied in the simulation.
-We see that all four methods converge to the desired target of 0.3 as the sample size grows. Interestingly, DJ approaches the target from below, while PM and QR approach it from above. A possible explanation is as follows. In DJ, the estimated variance tends to be larger than the true variance when the data length is small. This causes the order quantity often to be less than it should be. On the other hand, the integrated methods take the underage and overage costs into account. For the given cost parameters, over-stocking is less costly than under-stocking, as a result the methods achieve higher service level than needed.
+We see that all four methods converge to the desired target of 0.3 as the sample size grows. Interestingly, DGP and DJ approach the target from below, while PM and QR approach it from above. A possible explanation is as follows. In DGP and DJ, the estimated variance tends to be larger than the true variance when the data length is small. This causes the order quantity often to be less than it should be. On the other hand, the integrated methods take the underage and overage costs into account. For the given cost parameters, over-stocking is less costly than under-stocking, as a result the methods achieve higher service level than needed.
 
 Figure \ref{fig:fr0.3} represents the average FR. As one might expect, the average fill rate gets better as sample size grows in all methods. 
 
@@ -367,7 +367,7 @@ where $u\sim \mathcal{N}(30,5^2)$. Given that the target service level does not 
 
 Since the nonlinearity makes QR impossible to apply as we stated in Subsection \ref{sub:lit3}, we present results only for DJ and PM, together with the ``idealised" method based on the DGP.
 
-Figure \ref{fig:non} shows the PPL and SL of each method, for each sample size. It is apparent that both DJ and PM methods perform well in terms of PPL, with very similar values for all sample sizes, but, as expected, they cannot outperform the DGP. However, the picture is very different with SL: the SL of the proposed method is very close to the the target service level even when the sample size is small. By contrast, the disjoint method needs more data to reach the target service level, and it approaches it from below. This is because...
+Figure \ref{fig:non} shows the PPL and SL of each method, for each sample size. It is apparent that both DJ and PM methods perform well in terms of PPL, with very similar values for all sample sizes, but, as expected, they cannot outperform the DGP. However, the picture is very different with SL: the SL of the proposed method is very close to the the target service level even when the sample size is small. By contrast, the disjoint method needs more data to reach the target service level, and it approaches it from below. The reason is similar to the one we presented in Subsection \ref{sub:exp1}. 
 
 Another thing to note is that with the increase of the sample size, the approaches converge to the DGP values.
 
@@ -388,21 +388,17 @@ Another thing to note is that with the increase of the sample size, the approach
 \label{fig:non}
 \end{figure}
 
-We would like to stress that the proposed method does not need any complicated numerical optimisation or simulation methods to estimate the optimal order quantity. In addition, we have found that, for these instances, it typically required less computing time than the disjoint method. For example, ...
+We would like to stress that the proposed method does not need any complicated numerical optimisation or simulation methods to estimate the optimal order quantity. In addition, we have found that, for these instances, it typically required less computing time than the disjoint method. For example, only $\nicefrac{1}{10}$ amount of time is needed by using our proposed method when sample size is 40 comparing with DJ.
  
 \subsection{The effect of misspecification} \label{sub:exp3}
 \subsubsection{Linear case}
 
 We now return to the linear case, and examine the effect of
 \emph{model misspecification} on the performance of the disjoint method,
-DJ, and our proposed method, PM.
+DJ, and our proposed method, PM. As we have shown the QR and PM are equivalent in linear NVP, we don't include QR here.
 
 We first consider the case in which our model of the DGP is too simple.
 In more detail, the data is still generated from a seasonal ARIMA $(1,0,0)(1,0,0)_4$ model, but we ignore seasonality when solving the NVP. In other words, when estimating the optimal order quantity, we use the incorrect assumption that the DGP is merely an AR$(1)$ process. %As in Subsection \ref{sub:exp1}, we assume that the error term of the demand follows a normal distribution, and we use the linear profit function with target service level $=0.3$.
-
-The percentage profit losses for this case can be seen in Figure
-\ref{fig:mis} (a). By comparing with Figure \ref{fig:ppl0.3}, we see that the use of an incorrect model causes both DJ and PM to incur a small additional losses in profit irrespective of the sample size. These losses do not significantly improve as the number of data points increases, presumably because seasonality plays a key role when making one-step ahead forecasts. Interestingly, the performance of DJ and PM is similar, even though they are very different approaches. This could be because the assumptions about the distribution of error term are correct.
-
 \begin{figure}
 \centering
 \caption{Percentage profit loss vs. data size in misleading model}
@@ -418,6 +414,28 @@ The percentage profit losses for this case can be seen in Figure
 \caption{misleading model ARIMA $(2,0,0)(1,0,0)_4$}
 \end{subfigure}
 \label{fig:mis}
+\end{figure}
+
+The percentage profit losses for this case can be seen in Figure
+\ref{fig:mis} (a). By comparing with Figure \ref{fig:ppl0.3}, we see that the use of an incorrect model causes both DJ and PM to incur a small additional losses in profit irrespective of the sample size. These losses do not significantly improve as the number of data points increases, presumably because seasonality plays a key role when making one-step ahead forecasts. Interestingly, the performance of DJ and PM is similar, even though they are very different approaches. This could because the assumptions about the distribution of error term are correct.
+
+
+
+\begin{figure}
+\centering
+\caption{Service level vs. data size in misleading model}
+\begin{subfigure}[b]{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{information-plot_files/figure-latex/AR(1)sl-1.pdf}
+\caption{misleading model AR$(1)$}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{information-plot_files/figure-latex/SAR(3)(1)_4sl-1.pdf}
+\caption{misleading model ARIMA $(2,0,0)(1,0,0)_4$}
+\end{subfigure}
+\label{fig:mis_sl}
 \end{figure}
 
 Next, we consider the situation, when the applied model is overparameterised and is ARIMA$(2,0,0)(1,0,0)_4$. The results for this case can be seen in Figure \ref{fig:mis} (b). Both DJ and PM incur a loss in profit, as before. Now, however, the loss decreases with the increase of the sample size. Indeed, closer inspection of the regression output revealed that, in both DJ and PM, the estimated value of the redundant model parameter tended to zero as the sample size increased. This can be explained by the well-known statistical phenomenon of redundant variables: they lead to less efficient estimates of parameters but do not incur the bias in the estimates as the effect of omitted variables typically does.
